--- a/assignment4/css/recipestyle.css
+++ b/assignment4/css/recipestyle.css
@@ -57,19 +57,37 @@ img {
   float: right;
 }
 .nav {
-  width: 100%;
   display: flex; 
   height: 100%;
+  -webkit-flex-direction: row;
+  -webkit-justify-content:flex-end;
 
   }
 .nav li {
-  align-self: center; 
+  -webkit-align-self: center; 
   list-style: none;
-  float: right;
   margin-left: 10px;
   margin-right: 10px;
-}
-.logo: first-child {
-margin-right: auto;
 
 }
+.logo:first-child {
+margin-right: auto;
+flex: grow 12;
+}
+.submit select {
+   padding: 10px;
+   margin: 10px;
+   width: 55%;
+}
+#submission input, label
+ {
+  display: block;
+  width: 100px;
+}
+fieldset {
+  border: solid 5px;
+  padding-top: 25px;
+  height: 100%;
+  width: 400px;
+}
+
