--- a/assignment4/css/recipestyle.css
+++ b/assignment4/css/recipestyle.css
@@ -1,93 +1,110 @@
-
 body {
-   font-family: Arial;
-   color: #555555;
-   }
+    font-family: Arial;
+    color: #555555;
+}
+
 footer p {
-	font-size: 12px;
+    font-size: 12px;
 }
+
 h1 {
-	color:black;
-  font-size: 18px;
+    color: black;
+    font-size: 18px;
 }
+
 h2 {
-   font-size: 24px;
+    font-size: 24px;
 }
+
 table th {
-	height: 40px;
-	font-size: 14px;
-	text-align: left;
+    height: 40px;
+    font-size: 14px;
+    text-align: left;
 }
-tr:first-child, td:first-child {
-   width: 100px;
-   font-weight: bold;
+
+tr:first-child,
+td:first-child {
+    width: 100px;
+    font-weight: bold;
 }
+
 #instructions {
     margin-top: 40px;
 }
-tr :hover {
-   background-color: #feffdb;
-   cursor: pointer;
+
+tr:hover {
+    background-color: #feffdb;
+    cursor: pointer;
 }
+
 .yellow-box {
-   background-color: #feffdb;
-   border-style: solid;
-   height: 100px;
-   width: 200px;
-   border-color: #444444;
-   }
+    background-color: #feffdb;
+    border-style: solid;
+    height: 100px;
+    width: 200px;
+    border-color: #444444;
+}
+
 hr {
- color: #dddddd;
- margin-top: 40px;
+    color: #dddddd;
+    margin-top: 40px;
 }
+
 .Greybox {
-  height: 140px;
-  width: 100%;
-  background-color: grey;
+    height: 140px;
+    width: 100%;
+    background-color: grey;
 }
+
 img {
-  width: 100px;
+    width: 100px;
 }
+
 .button {
-  height: 30px;
-  width: 100px;
-  border: 1px solid;
-  border-color: #8abd2b;
-  background-color: #c8f279;
-  float: right;
+    height: 30px;
+    width: 100px;
+    border: 1px solid;
+    border-color: #8abd2b;
+    background-color: #c8f279;
+    float: right;
 }
+
 .nav {
-  display: flex; 
-  height: 100%;
-  -webkit-flex-direction: row;
-  -webkit-justify-content:flex-end;
+    display: flex;
+    height: 100%;
+    -webkit-flex-direction: row;
+    -webkit-justify-content: flex-end;
+}
 
-  }
 .nav li {
-  -webkit-align-self: center; 
-  list-style: none;
-  margin-left: 10px;
-  margin-right: 10px;
-
+    -webkit-align-self: center;
+    list-style: none;
+    margin-left: 10px;
+    margin-right: 10px;
 }
+
 .logo:first-child {
-margin-right: auto;
-flex: grow 12;
-}
-.submit select {
-   padding: 10px;
-   margin: 10px;
-   width: 55%;
-}
-#submission input, label
- {
-  display: block;
-  width: 100px;
-}
-fieldset {
-  border: solid 5px;
-  padding-top: 25px;
-  height: 100%;
-  width: 400px;
+    margin-right: auto;
+    flex: grow 12;
 }
 
+select {
+    padding: 10px;
+    margin: 10px;
+    width: 55%;
+}
+
+input,
+label {
+    display: block;
+    width: 100px;
+    margin-top: 10px;
+    padding: 5px;
+}
+
+fieldset {
+    border: solid 5px;
+    padding-top: 25px;
+    height: 500px;
+    width: 300px;
+}
