--- a/Week3assignment/CSS/week3.css
+++ b/Week3assignment/CSS/week3.css
@@ -1,48 +1,57 @@
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300,700);
 .jumbotron {
     margin-bottom: 25px;
-    background-image: url(../images/computerboard.jpg); 
+    background-image: url(../images/computerboard.jpg);
     background-size: cover;
     background-repeat: no-repeat;
-    color: white;   
-    height:300px; 
-
-}
-.jumbonavbar {
-	background-color: none;
-	color: yellow;
+    color: white;
+    height: 300px;
 }
 
- .nav a {
-	color: yellow;
+.navbar {
+    background-color: transparent;
+    background: transparent;
 }
-.container {
-	padding: 30px;
-	border: solid 1px lightgrey;
-    
+
+.navbar a {
+    color: #fea19a
 }
+
 #contact {
-	
-	height: 100px;
+    font-weight: 700;
+    height: 100px;
 }
+
 #skills {
-	background-color: lightgray;
+    background-color: lightgray;
 }
+
 #statistics {
-	
-	height: 225px;
+    font-weight: 700;
+    font-size: 2em;
+    height: 200px;
 }
+
 #stufficando {
-	background-color: lightgray;
+    background-color: lightgray;
 }
-#workstatus {
-	
-}
+
+#workstatus {}
+
 #resume {
-	background-color: lightgray;
+    background-color: lightgray;
 }
-#customers {
-	background-color: 
-}#contactme {
-	
-	background-color: lightgray
+
+#owl-example {
+    height: 200px;
+}
+
+#contactme {
+    background-color: lightgray
+}
+#owl-example .item img{
+  display: block;
+  width: auto;
+  height: auto;
+
 }
